# interhealth-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: Planilha de Governança.csv
docs/MV/: allergy.sql  condition.sql  encounter.sql  immunization.sql  location.sql  medication.sql  observation.sql  organization.sql  patient.sql  provider.sql  request_exam.sql  result_exam.sql  schedule.sql  specialty.sql  surgery.sql  vital_signs.sql
docs/TASY/: encounter.sql  location.sql  organization.sql  patient.sql  provider.sql
src/: main.rs
src/application/: mod.rs  state.rs
src/application/usecases/: auth.rs  company.rs  database_column.rs  database_configuration.rs  database_model.rs  database_model_value.rs  database_table.rs  database_transformation.rs  database_view.rs  database_view_mapping.rs  fhir.rs  integration_control.rs  metrics.rs  mod.rs  sync.rs  target_integration.rs  (+1 more)
src/controllers/: auth.rs  company.rs  database_column.rs  database_configuration.rs  database_model.rs  database_table.rs  database_transformation.rs  database_view.rs  database_view_mapping.rs  health.rs  integration_control.rs  metrics.rs  mod.rs  routes.rs  sync.rs  target_integration.rs  user.rs
src/core/: auth.rs  mod.rs
src/domain/: mod.rs
src/infrastructure/: mod.rs
src/seed/: mod.rs  seed.rs
src/settings/: mod.rs
src/sync/: job.rs  manager.rs  mod.rs  status.rs  worker.rs
src/utils/: date_format.rs  error.rs  mod.rs  object_id_format.rs  optional_date_format.rs  pagination.rs  replace.rs  response.rs  sort_helper.rs  validator.rs
(+54 files in other folders)
